# Finite_Diff_1D

./: .gitignore  Finite_diff.py  Materials.py  README.md  pyproject.toml
examples/: flux_mc_w_void.csv  fuel_slab_water_reflector.py
examples/mgxs_water_void/: diff_core.csv  diff_refl.csv  xs_a_core.csv  xs_a_refl.csv  xs_f_core.csv  xs_scat_core.csv  xs_scat_refl.csv  xs_tot_core.csv  xs_tot_refl.csv
src/finite_diff_1d/: Materials.py  Solver.py  __init__.py  solver.py
src/finite_diff_1d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
